--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "nodemailer": "^6.6.3",
+    "stripe": "^8.171.0",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0"
   }
 }
